# othello_rust

./: Cargo.toml  pyproject.toml
src/: demo.py  lib.rs
